--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -87,8 +87,7 @@
     color: red;
 }
 
-.downloadAll{
-    padding-top: 50px;
-    margin-left: 40%;
-    padding-bottom: 50px;
+.leftButton{
+    position: absolute;
+    left: 75%;
 }
