Editing references now possible

--- a/src/main/resources/templates/inpro_edit.html
+++ b/src/main/resources/templates/inpro_edit.html
@@ -9,7 +9,7 @@
                 <div class="form-container">
                     <div class="image-holder"></div>
                     <form method="post" th:object="${inproceeding}">
-                        <h2 class="text-center"><strong>Edit</strong> inproceeding.</h2>
+                        <h2 class="text-center"><strong>Edit</strong> an inproceeding</h2>
 
                         <div class="form-group">
                             <label class="lbl">Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{title}" name="title" placeholder="Results from a Three-Year Transition to the Extreme Apprenticeship Method" /></label>
