--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -8,14 +8,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Inproceedings<button id="downloadForm" type="button" name="downloadAll" class="btn btn-success leftButton" data-toggle="modal" data-target="#myModal">Download All</button></h2>
-                        <div class="modal fade" id="myModal" role="dialog">
+                        <h2>Inproceedings</h2>
+                        <div class="modal fade" id="downloadAll" role="dialog">
                             <div class="modal-dialog modal-sm">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                         <h4 class="modal-title">Download All References</h4>
-
                                     </div>
                                     <div class="modal-body">
                                         <div class="downloadAll">
@@ -31,7 +30,6 @@
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                         <div class="table-responsive">
@@ -42,6 +40,9 @@
                                         <td class="listingRow">Book title</td>
                                         <td class="listingRow">Authors</td>
                                         <td class="listingRow">Year</td>
+                                        <td class='listingRow'>
+                                            <button id="downloadForm" type="button" name="downloadAll" class="btn btn-success leftButton" data-toggle="modal" data-target="#downloadAll">Download All</button>
+                                        </td>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -51,17 +52,11 @@
                                         <td class="listingRow"><b th:text="${inpro.authorString()}">authors</b></td>
                                         <td class="listingRow"><b th:text="${inpro.publishYear}">year</b></td>
                                         <td class="listingRow">
-                                            <!-- Trigger the modal with a button -->
-                                            <button id="downloadForm" type="button" name="downloadBibtex" class="btn btn-success btn-block" data-toggle="modal" data-target="#myModal">Download</button>
-
-                                            <!-- Modal -->
-                                            <div class="modal fade" id="myModal" role="dialog">
+                                            <button id="downloadForm" type="button" name="downloadBibtex" class="btn btn-success" data-toggle="modal" data-target="#singleDownloadModal">Manage</button>
+                                            <div class="modal fade" id="singleDownloadModal" role="dialog">
                                                 <div class="modal-dialog modal-sm">
-
-                                                    <!-- Modal content-->
                                                     <div class="modal-content">
                                                         <div class="modal-header">
-
                                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                                                             <h4 class="modal-title">Download bibtex</h4>
                                                         </div>
@@ -74,17 +69,14 @@
                                                             </form>
                                                         </div>
                                                         <div class="modal-footer">
-                                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                            <form id="downloadForm" th:action="@{inpro/{inproId}/edit(inproId=${inpro.id})}" method="GET">
+                                                                <input class="btn btn-success btn-block" type="submit" value="Edit"/>
+                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                            </form>
                                                         </div>
                                                     </div>
-
                                                 </div>
-                                                <input class="btn btn-success btn-block" type="submit" value="Download"/>
-                                            
-                                             <form id="downloadForm" th:action="@{inpro/{inproId}/edit(inproId=${inpro.id})}" method="GET"><input class="btn btn-success btn-block" type="submit" value="Edit"/></form>
-
                                             </div>
-
                                         </td>
                                     </tr>
                                 </tbody>
