--- a/src/main/resources/public/css/styles.css
+++ b/src/main/resources/public/css/styles.css
@@ -5,7 +5,6 @@
 
 .features-boxed p {
     color:#7d8285;
-    @import "styles.css";
 }
 
 .features-boxed h2 {
@@ -71,7 +70,7 @@
 
 #downloadForm{
     position: relative;
-    left: 30;
+    left: 30%;
     max-width: 200px;
 }
 
