--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -18,7 +18,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="downloadAll">
-                                            <form id="downloadForm" th:action="@{/inpros/add/download}" method="GET">
+                                            <form id="downloadForm" th:action="@{/inpros/all/download}" method="GET">
                                                 <div class="form-group">
                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                 </div>
