--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -8,9 +8,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>References
-                            <button id="downloadForm" type="button" name="downloadAll" class="btn btn-success leftButton" data-toggle="modal" data-target="#myModal">Download All</button></h2>
-                        <div class="modal fade" id="myModal" role="dialog">
+                        <h2>References</h2>
+                        <div class="modal fade" id="downloadAll" role="dialog">
                             <div class="modal-dialog modal-sm">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -43,6 +42,9 @@
                                         <td class="listingRow">Authors</td>
                                         <td class="listingRow">Year</td>
                                         <td class="listingRow">Reference Key</td>
+                                        <td class='listingRow'>
+                                            <button id="downloadForm" type="button" name="downloadAll" class="btn btn-success leftButton" data-toggle="modal" data-target="#downloadAll">Download All</button>
+                                        </td>
                                     </tr>
                                 </thead>
                                 <tbody>
