--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -70,7 +70,7 @@
                                                         </div>
                                                         <div class="modal-footer">
                                                             <form id="downloadForm" th:action="@{article/{articleId}/edit(articleId=${article.id})}" method="GET">
-                                                                <input class="btn btn-success" type="submit" value="Edit" name="editButton"/>
+                                                                <input class="btn btn-success" type="submit" value="Edit" name='editButton'/>
                                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                             </form>
 
