--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -70,7 +70,7 @@
                                                         </div>
                                                         <div class="modal-footer">
                                                             <form id="downloadForm" th:action="@{inpro/{inproId}/edit(inproId=${inpro.id})}" method="GET">
-                                                                <input class="btn btn-success btn-block" type="submit" value="Edit"/>
+                                                                <input class="btn btn-success btn-block" type="submit" value="Edit" name='editButton'/>
                                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                             </form>
                                                         </div>
