--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -71,7 +71,7 @@
                                                         </div>
                                                         <div class="modal-footer">
                                                             <form id="downloadForm" th:action="@{book/{bookId}/edit(bookId=${book.id})}" method="GET">
-                                                                <input class="btn btn-success" type="submit" value="Edit"/>
+                                                                <input class="btn btn-success" type="submit" value="Edit" name='editButton'/>
                                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                             </form>
                                                         </div>
