--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -22,7 +22,7 @@
                                                 <div class="form-group">
                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                 </div>
-                                                <input class="btn btn-success btn-block" type="submit" value="Download All" name="confirmDownload"/>
+                                                <input class="btn btn-success btn-block" type="submit" value="Download All" name="confirmAllDownload"/>
                                             </form>
                                         </div>
                                     </div>
@@ -73,11 +73,9 @@
                                                                 <input class="btn btn-success" type="submit" value="Edit" name='editButton'/>
                                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                             </form>
-
                                                         </div>
                                                     </div>
                                                 </div>
-
                                             </div>
                                         </td>
                                     </tr>
