--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -22,7 +22,7 @@
                                                 <div class="form-group">
                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                 </div>
-                                                <input class="btn btn-success btn-block" type="submit" value="Download All" name="confirmDownload"/>
+                                                <input class="btn btn-success btn-block" type="submit" value="Download All" name="confirmAllDownload"/>
                                             </form>
                                         </div>
                                     </div>
