--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -18,14 +18,12 @@
 
                                     </div>
                                     <div class="modal-body">
-                                        <div class="downloadAll">
-                                            <form id="downloadForm" th:action="@{/list/download}" method="GET">
-                                                <div class="form-group">
-                                                    <input class="form-control"  type="text" name="fileName" value="bibtex"/>
-                                                </div>
-                                                <input class="btn btn-success btn-block" type="submit" value="Download All" name="confirmAllDownload"/>
-                                            </form>
-                                        </div>
+                                        <form th:action="@{/list/download}" method="GET">
+                                            <div class="form-group">
+                                                <input class="form-control"  type="text" name="fileName" value="bibtex"/>
+                                            </div>
+                                            <input class="btn btn-success btn-block" type="submit" value="Download All" name="confirmAllDownload"/>
+                                        </form>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
