--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,6 +42,11 @@ and open the template in the editor.
             </nav>
         </div>
         <div th:include="this :: content"/>
+        <div class="footer-basic">
+            <footer>
+                <p class="copyright">BibFrog © 2017</p>
+            </footer>
+        </div>
         <script src="/js/jquery.min.js"></script>
         <script src="/js/bootstrap.min.js"></script>
     </body>
