--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -12,19 +12,19 @@
                         <h2 class="text-center"><strong>Create</strong> an article.</h2>
 
                         <div class="form-group">
-                            <label class="lbl">Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{title}" name="title" placeholder="Operating Systems: Internal Design and Principles" /></label>
+                            <label class="lbl">Title: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{title}" name="title" placeholder="Diagnosed autism linked to maternal grandmother's smoking in pregnancy" /></label>
                             <a th:if="${#fields.hasErrors('title')}" th:errors="*{title}">title errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{givenAuthors}" name="givenAuthors" placeholder="William Stallings" /></label>
+                            <label class="lbl">Author(s): <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{givenAuthors}" name="givenAuthors" placeholder="J. Golding" /></label>
                             <a th:if="${#fields.hasErrors('givenAuthors')}" th:errors="*{givenAuthors}">authors errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Journal: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{journal}" name="journal" placeholder="Journal" /></label>
+                            <label class="lbl">Journal: <a class="requiredField">*</a><input class="form-control" type="text" th:field="*{journal}" name="journal" placeholder="Scientific Reports" /></label>
                             <a th:if="${#fields.hasErrors('journal')}" th:errors="*{journal}">journal errors</a>
                         </div>
                         <div class="form-group">
-                            <label class="lbl">Year: <a class="requiredField">*</a><input class="form-control" type="number" th:field="*{publishYear}" name="publishYear" placeholder="2013" /></label>
+                            <label class="lbl">Year: <a class="requiredField">*</a><input class="form-control" type="number" th:field="*{publishYear}" name="publishYear" placeholder="2017" /></label>
                             <a th:if="${#fields.hasErrors('publishYear')}" th:errors="*{publishYear}">year errors</a>
                         </div>
                         <div class="form-group">
