--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:fragment="base">
-
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=0.5"/>
@@ -44,7 +37,7 @@ and open the template in the editor.
         <div th:include="this :: content"/>
         <div class="footer-basic">
             <footer>
-                <p class="copyright">BibFrog © 2017</p>
+                <a href="https://www.github.com/lesktimo/BibFrog"><p class="copyright">BibFrog 2017</p></a>
             </footer>
         </div>
         <script src="/js/jquery.min.js"></script>
