--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -51,8 +51,8 @@
                                             <td class="listingRow"><b th:text="${article.journal}">journal</b></td>
                                             <td class="listingRow"><b th:text="${article.publishYear}">year</b></td>
                                             <td class="listingRow">
-                                                <button id="downloadForm" type="button" name="downloadBibtex" class="btn btn-success manageButton" data-toggle="modal" data-target="#singleDownloadModal">Manage</button>
-                                                <div class="modal fade" id="singleDownloadModal" role="dialog">
+                                                <button id="downloadForm" type="button" name="downloadBibtex" class="btn btn-success manageButton" data-toggle="modal" th:attr="data-target='#singleDownload'+${article.id}" >Manage</button>
+                                                <div class="modal fade" th:attr="id='singleDownload'+${article.id}" role="dialog">
                                                     <div class="modal-dialog modal-sm">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
