--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -52,8 +52,8 @@
                                             <td class="listingRow"><b th:text="${book.publisher}">publisher</b></td>
                                             <td class="listingRow"><b th:text="${book.publishYear}">year</b></td>
                                             <td class="listingRow">
-                                                <button id="downloadForm" type="button" name="downloadBibtex" class="btn btn-success manageButton" data-toggle="modal" data-target="#singleDownloadModal">Manage</button>
-                                                <div class="modal fade" id="singleDownloadModal" role="dialog">
+                                                <button id="downloadForm" type="button" name="downloadBibtex" class="btn btn-success manageButton" data-toggle="modal" th:attr="data-target='#singleDownload'+${book.id}">Manage</button>
+                                                <div class="modal fade" th:attr="id='singleDownload'+${book.id}" role="dialog">
                                                     <div class="modal-dialog modal-sm">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
