--- a/src/main/resources/public/css/Registration-Form-with-Photo.css
+++ b/src/main/resources/public/css/Registration-Form-with-Photo.css
@@ -9,6 +9,9 @@
   background:url(/img/meeting.jpg);
   background-size: cover;
 }
+/*#pepe {
+
+}*/
 
 .register-photo .form-container {
   display: table;
