--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,8 @@
         <div>
             <nav class="navbar navbar-default navigation-clean">
                 <div class="container">
-                    <div class="navbar-header"><a th:href="@{/}" name="frontpage" class="navbar-brand navbar-link">BibFrog</a>
+                    
+                    <div class="navbar-header"><a th:href="@{/}" name="frontpage" class="navbar-brand navbar-link"><img src="/img/pepe.jpg" id="pepe"/>BibFrog</a>
                         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span><span class="icon-bar"></span>
