--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -9,7 +9,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>References</h2>
+                            <h2 class="title2">References</h2>
                             <div class="modal fade" id="downloadAll" role="dialog">
                                 <div class="modal-dialog modal-sm">
                                     <div class="modal-content">
