--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -9,7 +9,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Articles</h2>
+                            <h2 class="title2">Articles</h2>
                             <div class="modal fade" id="downloadAll" role="dialog">
                                 <div class="modal-dialog modal-sm">
                                     <div class="modal-content">
