--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,6 +39,7 @@
         <div class="footer-basic">
             <footer>
                 <a href="https://www.github.com/lesktimo/BibFrog"><p class="copyright">BibFrog 2017</p></a>
+                <p class="copyright"><img class="z" src="/img/pepe.jpg" id="pepefrog" width="950" height="700" alt="pepehere"/></p>
             </footer>
         </div>
         <script src="/js/jquery.min.js"></script>
